CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT(GraspLoCoMo)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
SET_PROPERTY(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY  ${PROJECT_BINARY_DIR}/lib)

OPTION(DX_BUILD_TEST "Build Test" YES)
OPTION(DX_COPY_LIB "Copy Libs" YES)

ADD_DEFINITIONS(-D_USE_MATH_DEFINES)

#Look for EIGEN3
SET(EIGEN3_INCLUDE "${CMAKE_SOURCE_DIR}/ThirdParty/eigen" )
 
#NANOFLANN
SET(NANO_FLANN_INCLUDE "${CMAKE_SOURCE_DIR}/ThirdParty/nanoflann/include")

ADD_SUBDIRECTORY (Grasp)
 
# #Copy All Libs To the final directory
# IF (DX_COPY_LIB)
#     FILE(GLOB LIBS "${PROJECT_BINARY_DIR}/lib/Release/*.lib")
#     FILE(COPY ${LIBS} DESTINATION "${PROJECT_BINARY_DIR}/../lib")
# ENDIF (DX_COPY_LIB)
